<resources>
    <string name="app_name">Passei</string>
    <string name="login">Login</string>
    <string name="user">Usuário</string>
    <string name="sobre">Sobre o Passei</string>
    <string name="cancelar">Cancelar</string>
    <string name="selecione_curso">Selecione seu curso para que possamos carregar as disciplinas correspondentes:</string>
    <string name="curso">Curso</string>
    <string name="continuar">Continuar</string>
    <string name="materias">Matérias: </string>
    <string name="faltas">Faltas: </string>
    <string name="media">Média: </string>
    <string name="ver_mais">Ver Mais</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="aulas_hoje">Aulas de Hoje</string>
</resources>
